# brandizpyes

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  gh-release.sh  pyproject.toml
.github/workflows/: standard-build.yml
ci-build-v2/python-poetry/: build.sh
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/brandizpyes/: index.doctree
docs/_build/doctrees/autoapi/brandizpyes/logging/: index.doctree
docs/_build/jupyter_execute/: example.ipynb
docs/_build/markdown/: changelog.md  conduct.md  contributing.md  example.md  index.md
docs/_build/markdown/autoapi/: index.md
docs/_build/markdown/autoapi/brandizpyes/: index.md
docs/_build/markdown/autoapi/brandizpyes/logging/: index.md
src/brandizpyes/: ioutils.py  logging-default.yml  logging.py
tests/: conftest.py  logging-explicitly-loaded.yml  logging-test.yml  test_ioutils.py  test_logging.py
tests/resources/: logging-brandizpyes-test.yml  logging-explicitly-loaded.yml
