[tool.poetry]
name = "brandizpyes"
version = "0.1.0"
description = "Brandiz Pyes - Python Utilities"
authors = ["Marco Brandizi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
