[tool.poetry]
name = "brandizpyes"
version = "1.1.0"
description = "Brandiz Pyes - Python Utilities"
authors = ["Marco Brandizi"]
license = "MIT"
readme = "README.md"

[project.urls]
Repository = "https://github.com/marco-brandizi/brandizpyes.git"
Issues = "https://github.com/marco-brandizi/brandizpyes/issues"
Changelog = "https://github.com/marco-brandizi/brandizpyes/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.14"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<=9.0.1)",
    "debugpy (>=1.8.17,<2.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.6.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinx-markdown-builder (>=0.6.8,<0.7.0)",
    "assertpy (>=1.1,<2.0)",
]

[tool.pytest.ini_options]
addopts = [ "-v" ]
# You don't need them, it's already managed by our own logging config helper
# log_cli = true
# log_level = "DEBUG"
