[project]
name = "brandizpyes"
version = "1.1.6"
description = "Brandiz Pyes - Python Utilities"
authors = [
  { name = "Marco Brandizi" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11" # ^3.11 isn't valid in PyPI

[project.urls]
Repository = "https://github.com/MarcoBrandiziGeek/brandizpyes/"
Issues = "https://github.com/MarcoBrandiziGeek/brandizpyes/issues"
Changelog = "https://github.com/MarcoBrandiziGeek/brandizpyes/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<=9.0.1)",
    "debugpy (>=1.8.17,<2.0.0)",
    "assertpy (>=1.1,<2.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)",
]

[tool.pytest.ini_options]
addopts = [ "-v" ]
# You don't need them, it's already managed by our own logging config helper
# log_cli = true
# log_level = "DEBUG"
